--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ body {
   .conteinerPlease{
     display: none;
   }
-  p{
+  /* p{
     display: none;
-  }
+  } */
   h1 {
     margin: 0;
     font-size: 5vh;
