--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ body {
   .conteinerPlease{
     display: none;
   }
-  /* p{
+  .text{
     display: none;
-  } */
+  }
   h1 {
     margin: 0;
     font-size: 5vh;
@@ -374,7 +374,7 @@ body {
     justify-content: space-around;
 
   }
-  p{
+  .text{
     margin: 4% 8%;
     font-size: 11vh;
     display: flex;
