--- a/styles.css
+++ b/styles.css
@@ -330,9 +330,9 @@ body {
     height: 40vh;
     overflow: auto;
     text-align: center;
-    margin-left: 1.4vh;
+    /* margin-left: 1.4vh;
     margin-top: 0.2vh;
-    margin-bottom: 1.8vh;
+    margin-bottom: 1.8vh; */
     font-weight: bold;
   }
   .resultArt{
