--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ body {
     background-color: #83a02b;
   }
   .categoryBtn{
-    margin-left: 3vh;
+    /* margin-left: 3vh; */
     background-color: #72bcdc;
   }
   .backBtn{
@@ -222,7 +222,7 @@ body {
     color: #fff;
     border: none;
     cursor: pointer;
-    font-size: 2vh;
+    font-size: 1.9vh;
     border-radius: 2.6vh;
     transition: background-color 0.3s;
     
