--- a/styles.css
+++ b/styles.css
@@ -517,7 +517,7 @@ body {
   
   .sectionQuiz{
     display: none;
-    margin: 1% 3%;
+    /* margin: 1% 3%; */
     line-height: 3.5vh;
     font-family: 'Montserrat', sans-serif;
     font-size: 2.4vh;
