--- a/styles.css
+++ b/styles.css
@@ -517,6 +517,8 @@ body {
   
   .sectionQuiz{
     display: none;
+    overflow: auto;
+    text-align: center;
     /* margin: 1% 3%; */
     line-height: 3.5vh;
     font-family: 'Montserrat', sans-serif;
