--- a/styles.css
+++ b/styles.css
@@ -516,9 +516,9 @@ body {
   } 
   
   .sectionQuiz{
-    display: none;
     overflow: auto;
-    text-align: center;
+    text-align: left;
+    display: none;
     /* margin: 1% 3%; */
     line-height: 3.5vh;
     font-family: 'Montserrat', sans-serif;
