--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,12 @@ body {
 
 
 @media (min-width: 320px) and (max-width: 992px) {
-  .conteinerPlease{
+  /* .conteinerPlease{
     display: none;
   }
   .text{
     display: none;
-  }
+  } */
   h1 {
     margin: 0;
     font-size: 4vh;
@@ -377,27 +377,27 @@ body {
     z-index: 10;
  }   
 
-  .conteinerPlease{
+  /* .conteinerPlease{
     display: flex;
     justify-content: space-around;
 
-  }
-  .text{
+  } */
+  /* .text{
     margin: 4% 8%;
     font-size: 11vh;
     display: flex;
     justify-content: center;
     color: #35420d;
-  }
+  } */
    h1 {
-    display: none;
+    /* display: none; */
     margin: 0;
     font-size: 6.7vh;
     text-align: center;
     color: #94b436;
   }
   h2{
-    display: none;
+    /* display: none; */
     margin: 1vh 6vh;
     font-size: 2vh; 
     text-align: center; 
@@ -405,7 +405,7 @@ body {
     color: #788c3b;
   }
   h3{
-    display: none;
+    /* display: none; */
     font-size: 2vh;
     font-family: 'Montserrat', sans-serif;
     margin: 0.2vh 1.2vh;
@@ -414,27 +414,35 @@ body {
     text-align: center;
     color: #728c25;
   }
+  .headContainer{
+    height: 7.5vh;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+  } 
   .line1{
-    display: none;
+    /* display: none; */
     height: 3.6vh;
     width: 100%;
+    filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%);
   }
   .patternPic{
-    display: none;
+    /* display: none; */
     display: flex;
     justify-content: space-around;
     align-items: baseline;
-    filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-top: 18px;
+    /* filter: invert(36%) sepia(8%) saturate(3184%) hue-rotate(44deg) brightness(93%) contrast(81%); padding-top: 18px; */
   }
   .picContainer{
-    display: none;
+    /* display: none; */
     display: flex;
     justify-content: center;
     align-items: baseline;
   }
 
   .containerMenu {
-    display: none;
+    /* display: none; */
     border: #738b2b;
     width: 85%;
     height: 70vh;
@@ -446,7 +454,7 @@ body {
     border-radius: 50px;
   } 
   .buttonStart{
-    display: none;
+    /* display: none; */
     font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
@@ -461,17 +469,24 @@ body {
     border-radius: 3vh;
     transition: background-color 0.3s;
   }
-
+  .buttonStart:hover {
+    background-color: #9dab5b;
+    color: #b9c572;
+  }
   .propetyStart{
-    display: none;
+    /* display: none; */
     margin-bottom: 1.6vh;
     display: flex;
     justify-content: center;
-    align-items: baseline; 
+    /* align-items: baseline;  */
   }
-
+  .category{
+    margin-top: 1vh;
+    text-align: center;
+    font-size: 2vh;
+  }
    .categorySection{
-    display: none;
+    /* display: none; */
     border: #738b2b;
     width: 90%;
     height: 86vh;
@@ -483,7 +498,7 @@ body {
   }
 
   .categorBtn{
-    display: none;
+    /* display: none; */
     font-family: 'Montserrat', sans-serif;
     margin: 1% 10%;
     display: inline-block;
@@ -498,7 +513,7 @@ body {
   }
 
   .container {
-    display: none;
+    /* display: none; */
     border: #738b2b;
     width: 85%;
     height: 64vh;
@@ -519,15 +534,27 @@ body {
   .sectionQuiz{
     overflow: auto;
     text-align: left;
-    display: none;
+    /* display: none; */
     /* margin: 1% 3%; */
     line-height: 3.5vh;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8vh;
   } 
+  .musicTextColor{
+    color: #eda1bf;
+  }
+  .libTextColor{
+    color: #aec77c;
+  }
+  .TipTextColor{
+    color: #2789d5;
+  }
+  .ArtTextColor{
+    color: #c9832e;
+  }
 
   .button {
-    display: none;
+    /* display: none; */
     margin-top: 1%;
     display: inline-block;
     height: 6vh;
