--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,9 @@ body {
   .text{
     display: none;
   } */
+  .infoAbout1024px{
+    display: none;
+  }
   h1 {
     margin: 0;
     font-size: 4vh;
@@ -370,6 +373,9 @@ body {
 
 @media (min-width:1024px){
   .infoAbout{
+    display: none;
+  }
+  .infoAboutinfoAbout1024px{
     position: fixed;
     bottom: 0;
     left: 0;
